--- a/resnet.ipynb
+++ b/resnet.ipynb
@@ -282,6 +282,21 @@
    "source": [
     "model.save('trained_model(resnet).h5')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Convert training history to a pandas DataFrame\n",
+    "history_df = pd.DataFrame(history.history)\n",
+    "\n",
+    "# Save the history to a CSV file\n",
+    "history_df.to_csv('training_log(resnet).csv', index=False)"
+   ]
   }
  ],
  "metadata": {
